add_executable(01-Permissions 01-permissions.cc)
add_executable(02-struct-class 02-struct-class.cc)
add_executable(03-propertiesprivate 03-propertiesprivate.cc)
add_executable(04-cube 04-cube.cc)
add_executable(05-Circle-test 05-Circle-test.cc Circle.cpp point.cpp)
add_executable(06-Constructor 06-constructor.cc)
add_executable(07-Constructor 07-constructor.cpp)
add_executable(08-Copy-constructor 08-copy-constructor.cc)
add_executable(09-Depth-copy 09-depth-copy.cc)
add_executable(10-InitializationList 10-initializationList.cc)
add_executable(11-Object-member 11-object-member.cc)
add_executable(12-Static-function 12-static-function.cc)
add_executable(13-Member-variable-member-function-seperate-storage 13-member-variable-member-function-seperate-storage.cc)
add_executable(14-This-pointer 14-this-pointer.cc)
add_executable(15-Null-poiter-access-members-functions 15-null-poiter-access-members-functions.cc)
add_executable(16-Const-embellish-member-function 16-const-embellish-member-function.cc)
add_executable(17-Inherit-basic 17-inherit-basic.cc)
add_executable(18-Inherit-way 18-inherit-way.cc)
add_executable(19-Inherit-construct-destructor 19-inherit-construct-destructor.cc)
add_executable(20-Inherit-common-name-function 20-inherit-common-name-function.cc)
add_executable(21-Inherit-common-static 21-inherit-common-static.cc)

