add_executable(01-Template-basic 01-template-basic.cc)
add_executable(02-Function-template-announcements 02-function-template-announcements.cc)
add_executable(03-Function-template-example 03-function-template-example.cc)
add_executable(04-Class-template-basic 04-class-template-basic.cc)
add_executable(05-Class-template-function-template-diff 05-class-template-function-template-diff.cc)